# job-search-agent

./: .gitignore  README.md  pyproject.toml
docs/diagrams/: sprites.puml  system_design.puml
scripts/: init_db.py
src/: main.py
src/core/: db.py  llm.py  models.py  repositories.py  utils.py
src/services/apply/: apply.py
src/services/company_review/: review.py
src/services/job_discovery/: discover.py  main.py
src/services/job_discovery/sources/: public_scraper.py  serp_api.py
src/services/job_summary/: summarize.py
src/services/login_register/: login.py  register.py
src/ui/: app.py  utils.py
src/ui/components/: editable_applicant_info.py  editable_interview_notes.py  job_card.py
src/ui/components/common/: button.py  card.py
src/ui/pages/: home.py  login_register.py  new_jobs.py  single_job.py
src/ui/styles/: theme.css
